--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -16,7 +16,7 @@ $color-blockquote:             #282f36 !default;
 $color-blockquote-border:      #28aaff !default;
 
 // Buttons
-$color-btn:                    #fff !default;
+$color-btn:                    #000 !default;
 $color-btn-bg:                 #28aaff !default;
 $color-btn-border:             #28aaff !default;
 $color-btn-alt:                #28aaff !default;
