--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -17,7 +17,7 @@ $color-blockquote-border:      #28aaff !default;
 
 // Buttons
 $color-btn:                    #fff !default;
-$color-btn-bg:                 #28aaff !default;
+$color-btn-bg:                 #000 !default;
 $color-btn-border:             #28aaff !default;
 $color-btn-alt:                #28aaff !default;
 $color-btn-alt-bg:             transparent !default;
