--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -19,7 +19,7 @@ $color-blockquote-border:      #28aaff !default;
 $color-btn:                    #fff !default;
 $color-btn-bg:                 #000 !default;
 $color-btn-border:             #000 !default;
-$color-btn-alt:                #28aaff !default;
+$color-btn-alt:                #000 !default;
 $color-btn-alt-bg:             transparent !default;
 $color-btn-alt-border:         #28aaff !default;
 $color-btn-clear:              #282f36 !default;
