--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -9,7 +9,7 @@ $color-bg-overlay:             rgba(245,246,247,.8) !default;
 $color-border:                 #e1e4e9 !default;
 
 // Links
-$color-link:                   #053542 !default;
+$color-link:                   #28aaff !default;
 
 // Blockquotes
 $color-blockquote:             #282f36 !default;
@@ -21,7 +21,7 @@ $color-btn-bg:                 #000 !default;
 $color-btn-border:             #000 !default;
 $color-btn-alt:                #000 !default;
 $color-btn-alt-bg:             transparent !default;
-$color-btn-alt-border:         #000 !default;
+$color-btn-alt-border:         #28aaff !default;
 $color-btn-clear:              #282f36 !default;
 
 // Navigation
