--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -21,7 +21,7 @@ $color-btn-bg:                 #000 !default;
 $color-btn-border:             #000 !default;
 $color-btn-alt:                #000 !default;
 $color-btn-alt-bg:             transparent !default;
-$color-btn-alt-border:         #28aaff !default;
+$color-btn-alt-border:         #053542 !default;
 $color-btn-clear:              #282f36 !default;
 
 // Navigation
