--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -1,7 +1,7 @@
 // Colors
 // Base
 $color-text:                   #536171 !default;
-$color-heading:                #282f36 !default;
+$color-heading:                #053542 !default;
 $color-meta:                   #8594a5 !default;
 $color-bg:                     #fff !default;
 $color-bg-alt:                 #f5f6f7 !default;
